[package]
name = "licenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
mockito = "0.31.1"
reqwest = "0.11.13"
select = "0.6.0"
semver = "1.0.14"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
tokio = { version = "1.23.0", features = ["macros", "rt", "rt-multi-thread"] }

